--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <link href="styles/test.css" rel="stylesheet" type="text/css" />
+  <link href="styles/main.css" rel="stylesheet" type="text/css" />
   <title>Notes by Abraham</title>
 </head>
 <body>
